# PDFParseKit

./: .gitignore  README.md  logger_conf.yml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/cli/: doc.md
docs/core/: doc.md
pdfparsekit/: __main__.py
pdfparsekit/cli/: pdf_parser_cli.py
pdfparsekit/core/: pdf_parser.py
pdfparsekit/utils/: colors.py  custom_help_formater.py  logger.py
tests/cli/: test_pdf_parser_cli.py
tests/cli_test_helpers/: commands.py
tests/core/: test_pdf_parser.py
tests/test-files/: background-checks-origin.txt
